starting with movie-proposal endpoint
